# HaCode

./: .gitignore  README.md
DeferClass/: CMakeLists.txt  DeferClass.cpp  DeferClass.h  README.md  main.cpp
DriveInfo/: CMakeLists.txt  DriveInfo.cpp  DriveInfo.h  README.md  mainwindow.cpp  mainwindow.ui
DriveInfo/Qt5/: CMakeLists.txt  DriveInfo.cpp  DriveInfo.h  mainwindow.cpp  mainwindow.h
TwoPass/: main.py  two_pass.ipynb
Utf8Utf16/: CMakeLists.txt  README.md  Utf8Utf16.cpp  Utf8Utf16.h  main.cpp
